--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
                 android:layout_width="72dp"
                 android:layout_height="72dp"
                 android:layout_margin="12dp"
-                android:text="C"
+                android:text="@string/C"
                 android:textColor="@color/white"
                 android:textSize="32dp"
                 android:backgroundTint="@color/Prime"
@@ -273,7 +273,7 @@
                 android:layout_width="72dp"
                 android:layout_height="72dp"
                 android:layout_margin="12dp"
-                android:text="AC"
+                android:text="@string/AC"
                 android:textColor="@color/white"
                 android:textSize="20dp"
                 android:backgroundTint="#F44336"
