--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="Prime">#FF9800</color>
+    <color name="Prime">#337DFF</color>
+    <color name="Gray">#555555</color>
 </resources>
